syntax = "proto3";

package darmok.protobuf;

import "input.proto";
import "math.proto";

message FreelookController {
    float look_sensitivity = 1;
    float move_sensitivity = 2;
    Vec2 max_look_angle = 3;
    repeated InputEvent enable_events = 4;
    MoveInputDirs move = 5;
    LookInputDirs look = 6;
    optional uint32 camera = 7;
}