syntax = "proto3";

package darmok.protobuf;

message Input {
    enum DirType {
        DirNone = 0;
        DirUp = 1;
        DirDown = 2;
        DirLeft = 3;
        DirRight = 4;
    }
}

message Keyboard {
    enum Modifier {
        ModifierNone = 0;
        ModifierAlt = 1;
        ModifierCtrl = 2;
        ModifierShift = 3;
        ModifierMeta = 4;
    }

    enum Key {
        KeyNone = 0;
        KeyEsc = 1;
        KeyReturn = 2;
        KeyTab = 3;
        KeySpace = 4;
        KeyBackspace = 5;
        KeyUp = 6;
        KeyDown = 7;
        KeyLeft = 8;
        KeyRight = 9;
        KeyInsert = 10;
        KeyDelete = 11;
        KeyHome = 12;
        KeyEnd = 13;
        KeyPageUp = 14;
        KeyPageDown = 15;
        KeyPrint = 16;
        KeyPlus = 17;
        KeyMinus = 18;
        KeyLeftBracket = 19;
        KeyRightBracket = 20;
        KeySemicolon = 21;
        KeyQuote = 22;
        KeyComma = 23;
        KeyPeriod = 24;
        KeySlash = 25;
        KeyBackslash = 26;
        KeyGraveAccent = 27;
        KeyCapsLock = 28;
        KeyNumLock = 29;
        KeyScrollLock = 30;
        KeyPause = 31;
        KeyF1 = 32;
        KeyF2 = 33;
        KeyF3 = 34;
        KeyF4 = 35;
        KeyF5 = 36;
        KeyF6 = 37;
        KeyF7 = 38;
        KeyF8 = 39;
        KeyF9 = 40;
        KeyF10 = 41;
        KeyF11 = 42;
        KeyF12 = 43;
        KeyNumPad0 = 44;
        KeyNumPad1 = 45;
        KeyNumPad2 = 46;
        KeyNumPad3 = 47;
        KeyNumPad4 = 48;
        KeyNumPad5 = 49;
        KeyNumPad6 = 50;
        KeyNumPad7 = 51;
        KeyNumPad8 = 52;
        KeyNumPad9 = 53;
        Key0 = 54;
        Key1 = 55;
        Key2 = 56;
        Key3 = 57;
        Key4 = 58;
        Key5 = 59;
        Key6 = 60;
        Key7 = 61;
        Key8 = 62;
        Key9 = 63;
        KeyA = 64;
        KeyB = 65;
        KeyC = 66;
        KeyD = 67;
        KeyE = 68;
        KeyF = 69;
        KeyG = 70;
        KeyH = 71;
        KeyI = 72;
        KeyJ = 73;
        KeyK = 74;
        KeyL = 75;
        KeyM = 76;
        KeyN = 77;
        KeyO = 78;
        KeyP = 79;
        KeyQ = 80;
        KeyR = 81;
        KeyS = 82;
        KeyT = 83;
        KeyU = 84;
        KeyV = 85;
        KeyW = 86;
        KeyX = 87;
        KeyY = 88;
        KeyZ = 89;
    }

    message InputEvent {
        Key key = 1;
        repeated Modifier modifiers = 2;
    }
}

message Mouse {
    enum Analog {
        AnalogNone = 0;
        AnalogPosition = 1;
        AnalogScroll = 2;
    }

    enum Button {
        ButtonNone = 0;
        ButtonLeft = 1;
        ButtonMiddle = 2;
        ButtonRight = 3;
    }

    message InputEvent {
        Button button = 1;
    }

    message InputDir {
        Analog analog = 1;
        Input.DirType type = 2;
    }
}

message Gamepad {
    enum Stick {
        StickNone = 0;
        StickLeft = 1;
        StickRight = 2;
    }

    enum Button {
        ButtonNone = 0;
        ButtonA = 1;
        ButtonB = 2;
        ButtonX = 3;
        ButtonY = 4;
        ButtonLeftBumper = 5;
        ButtonRightBumper = 6;
        ButtonSelect = 7;
        ButtonStart = 8;
        ButtonLeftThumb = 9;
        ButtonRightThumb = 10;
        ButtonPadUp = 11;
        ButtonPadRight = 12;
        ButtonPadDown = 13;
        ButtonPadLeft = 14;
        ButtonGuide = 15;
    }

    message InputEvent {
        Button button = 1;
        uint32 gamepad = 2;
    }

    message StickInputEvent {
        Stick stick = 1;
        Input.DirType dir = 2;
        uint32 gamepad = 3;
    }

    message InputDir {
        Stick stick = 1;
        Input.DirType type = 2;
        uint32 gamepad = 3;
    }
}

message InputEvent {
	oneof event {
		Keyboard.InputEvent keyboard = 1;
		Mouse.InputEvent mouse = 2;
		Gamepad.InputEvent gamepad = 3;
        Gamepad.StickInputEvent gamepad_stick = 4;
	}
}

message InputDir {
    oneof dir {
		Mouse.InputDir mouse = 1;
		Gamepad.InputDir gamepad = 2;
        InputEvent event = 3;
	}
}

message MoveInputDirs {
    repeated InputDir left = 1;
    repeated InputDir right = 2;
    repeated InputDir forward = 3;
    repeated InputDir backward = 4;
}

message LookInputDirs {
    repeated InputDir left = 1;
    repeated InputDir right = 2;
    repeated InputDir up = 3;
    repeated InputDir down = 4;
}