syntax = "proto3";

package darmok.protobuf;

import "math.proto";

message ArmatureJoint {
    string name = 1;
    Mat4 inverse_bind_pose = 2;
}

message Armature {
    string name = 1;
    repeated ArmatureJoint joints = 2;
}

message SkeletalAnimatorBlendType {
    enum Enum {
        Cartesian = 0;
        Directional = 1;
    }
}

message SkeletalAnimatorAnimation {
    string name = 1;
    Vec2 blend_position = 2;
    float speed = 3;
    bool loop = 4;
}

message SkeletalAnimatorTween {
    EasingType.Enum easing = 1;
    float duration = 2;
}

message SkeletalAnimatorState {
    string name = 1;
    repeated SkeletalAnimatorAnimation animations = 2;
    SkeletalAnimatorBlendType.Enum blend = 3;
    float threshold = 4;
    SkeletalAnimatorTween tween = 5;
    string next_state = 6;
    float speed = 7;
}

message SkeletalAnimatorTransition {
    string src_state = 1;
    string dst_state = 2;
    SkeletalAnimatorTween tween = 3;
    float offset = 4;
}

message SkeletalAnimator {
    string animation_pattern = 1;
    repeated SkeletalAnimatorState states = 2;
    repeated SkeletalAnimatorTransition transitions = 3;
}